fix gap under menu
occurs in opera browser 12

--- a/branding/css/spacewalk-responsive-rules.less
+++ b/branding/css/spacewalk-responsive-rules.less
@@ -3,7 +3,8 @@
 	.spacewalk-main-column-layout aside {
 		margin-bottom: 1em;
 		padding-bottom: 0;
-		border-bottom: 1px solid #ccc
+		border-bottom: 1px solid #ccc;
+		min-height: 1px;
 	}
 }
 .sidenav-horizontal {
